making videos pop-up from link instead of navigating

--- a/winter.html
+++ b/winter.html
@@ -63,10 +63,10 @@
         <br/>
 <!--        <span>To access these links, please make sure you're logged in with the proper youtube account. If you have any issues, send me a slack message with your youtube account email address and I'll make sure it matches what I have set-up.</span>-->
         <div id="links">
-            <a href="https://www.youtube.com/watch?v=HztdfVJQQv0&list=PLMv6teHK7iPI9bL2J8M7e29dQnhbk4OR1&index=1">Class 1 Part 1 - October 31 - Introduction</a><br/>
-            <a href="https://www.youtube.com/watch?v=Eu_oCxx1klE&list=PLMv6teHK7iPI9bL2J8M7e29dQnhbk4OR1&index=2">Class 1 Part 2 - October 31 - Introduction</a><br/><br/>
-            <a href="https://www.youtube.com/watch?v=UwjTD5XtYpU&list=PLMv6teHK7iPI9bL2J8M7e29dQnhbk4OR1&index=3">Class 2 Part 1 - November 1 - Design</a><br/>
-            <a href="https://www.youtube.com/watch?v=f_YNooMpjOk&list=PLMv6teHK7iPI9bL2J8M7e29dQnhbk4OR1&index=4">Class 2 Part 2 - November 1 - Design</a><br/>
+            <a href="https://www.youtube.com/watch?v=HztdfVJQQv0&list=PLMv6teHK7iPI9bL2J8M7e29dQnhbk4OR1&index=1" target="_blank">Class 1 Part 1 - October 31 - Introduction</a><br/>
+            <a href="https://www.youtube.com/watch?v=Eu_oCxx1klE&list=PLMv6teHK7iPI9bL2J8M7e29dQnhbk4OR1&index=2" target="_blank">Class 1 Part 2 - October 31 - Introduction</a><br/><br/>
+            <a href="https://www.youtube.com/watch?v=UwjTD5XtYpU&list=PLMv6teHK7iPI9bL2J8M7e29dQnhbk4OR1&index=3" target="_blank">Class 2 Part 1 - November 1 - Design</a><br/>
+            <a href="https://www.youtube.com/watch?v=f_YNooMpjOk&list=PLMv6teHK7iPI9bL2J8M7e29dQnhbk4OR1&index=4" target="_blank">Class 2 Part 2 - November 1 - Design</a><br/>
         </div>
     </body>
 </html>
